# tsitsiko1

./: LICENSE  README.md  nesi.py  pyproject.toml  str_nlp.py
.github/workflows/: quality.yml
src/nlp1_utils/: __init__.py
